finalize this version odoo 10

--- a/index.html
+++ b/index.html
@@ -1,23 +1,4 @@
-<!-- <div style="z-index: 3;position: absolute;">
-        <ul style="display: inline;">
-            <li>
-                <a class="text-black" href="#">OVERVIEW</a>
-            </li>
-            <li>
-                <a class="text-black" href="#">FEATURES</a>
-            </li>
-            <li>
-                <a class="text-black" href="#">HOW TO</a>
-            </li>
-            <li>
-                <a class="text-black" href="#">OUR SERVICES</a>
-            </li>
-            <li>
-                <a class="text-black" href="#">CONTACT US</a>
-            </li>
 
-        </ul>
-    </div> -->
 
 <header>
     <div class="hero"
@@ -160,23 +141,26 @@
 </div>
 <div class="container" style="padding-top: 50px">
     <div class="row">
-
-        <div class="col-md-6">
+        <div class="col-md-12" align="center">
             <img src="img/company.png" style="width: 250px;" />
         </div>
-
-        <div class="col-md-6" >
+    </div>
+    <div class="row">
+        <div class="col-md-12" align="center">
             <h1>Need Assistance ? </h1>
-
-            <span>If you have anything to suggest with us based on your use of this module, please let us know. We are ready to offer our support.</span>
-
-            <h4> Email Us  <i class="fa fa-envelope"/> </h4>
+            <span>If you have anything to suggest with us based on your use of this module, please let us know. We are
+                ready to offer our support.</span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6" align="center">
+            <h4> Email Us <i class="fa fa-envelope" /> </h4>
             <span> hi@satusoft.com </span>
-
-            <h4> Contact Us </h4>
-            <span> https://satusoft.com </span>
-            
         </div>
 
+        <div class="col-md-6" align="center">
+            <h4> Contact Us </h4>
+            <span> https://satusoft.com </span>
+        </div>
     </div>
 </div>
